--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ timezone:
 
 title: Cal Howard                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Cal Howard   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
