--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ social:
   email: cal@calhoward.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
+    - https://twitter.com/calhoward      # change to your twitter homepage
     - https://github.com/username       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
