--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ timezone: America/New_York
 
 title: Cal Howard                          # the main title
 
-tagline: Cal Howard   # it will display as the sub-title
+tagline: Sharing discoveries in the world of computers, automation, lifestyle and more   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A website by Cal Howard
