--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ timezone: America/New_York
 
 title: Cal Howard                          # the main title
 
-tagline: Chronicling my discoveries in the world of tech  # it will display as the sub-title
+tagline: Chronicling my discoveries in the field  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A website by Cal Howard
@@ -47,8 +47,8 @@ social:
     - https://twitter.com/calhoward      # change to your twitter homepage
     - https://github.com/username       # change to your github homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    https://www.facebook.com/calhowardMV
+    https://www.linkedin.com/in/calhoward
 
 google_site_verification:               # fill in to your verification string
 
