--- a/_config.yml
+++ b/_config.yml
@@ -200,6 +200,10 @@ markdown: kramdown
 
 highlighter: rouge
 
+markdown: kramdown
+highlighter: rouge
 kramdown:
   input: GFM
-  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    default_lang: html
+    css_class   : 'syntax'
