--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ title: Cal Howard                          # the main title
 tagline: Chronicling my discoveries in the tech world  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A website by Cal Howard
+  Chronicling my discoveries in the tech world
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://calhoward.com'
