--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ description: >-                        # used by seo meta and the atom feed
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://calhoward.com'
 
+plugins:
+  - jekyll-sitemap
+
 github:
   username: calhoward            # change to your github username
 
